--- a/CodeDoAn/CoachTicketManagement/CoachTicketManagement/CoachTicketManagement.csproj
+++ b/CodeDoAn/CoachTicketManagement/CoachTicketManagement/CoachTicketManagement.csproj
@@ -90,6 +90,12 @@
     <Compile Include="fAuthenticate.designer.cs">
       <DependentUpon>fAuthenticate.cs</DependentUpon>
     </Compile>
+    <Compile Include="fBill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fBill.Designer.cs">
+      <DependentUpon>fBill.cs</DependentUpon>
+    </Compile>
     <Compile Include="fManagement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +109,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\ADOHelper.cs" />
     <Compile Include="Utility\ConnectionString.cs" />
+    <Compile Include="Utility\ControlHelper.cs" />
     <Compile Include="Utility\Utilities.cs" />
     <EmbeddedResource Include="fAccountInfo.resx">
       <DependentUpon>fAccountInfo.cs</DependentUpon>
@@ -112,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fAuthenticate.resx">
       <DependentUpon>fAuthenticate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fBill.resx">
+      <DependentUpon>fBill.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fManagement.resx">
       <DependentUpon>fManagement.cs</DependentUpon>
