--- a/CodeDoAn/CoachTicketManagement/CoachTicketManagement/CoachTicketManagement.csproj
+++ b/CodeDoAn/CoachTicketManagement/CoachTicketManagement/CoachTicketManagement.csproj
@@ -36,6 +36,10 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr3.Runtime.3.5.1\lib\net40-client\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="FluentNHibernate, Version=3.1.0.0, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentNHibernate.3.1.0\lib\net461\FluentNHibernate.dll</HintPath>
     </Reference>
@@ -56,6 +60,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,8 +74,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\AccountService.cs" />
+    <Compile Include="Core\DataService.cs" />
+    <Compile Include="Core\ClientService.cs" />
     <Compile Include="Core\EmployeeService.cs" />
     <Compile Include="Data\Map\AccountMap.cs" />
+    <Compile Include="Data\Map\ClientMap.cs" />
     <Compile Include="Data\Map\EmployeeMap.cs" />
     <Compile Include="Data\NHibernateHelper.cs" />
     <Compile Include="fAccountInfo.cs">
@@ -90,6 +99,12 @@
     <Compile Include="fAuthenticate.designer.cs">
       <DependentUpon>fAuthenticate.cs</DependentUpon>
     </Compile>
+    <Compile Include="fBaoCao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fBaoCao.Designer.cs">
+      <DependentUpon>fBaoCao.cs</DependentUpon>
+    </Compile>
     <Compile Include="fBill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,15 +117,51 @@
     <Compile Include="fManagement.designer.cs">
       <DependentUpon>fManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="fPayment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fPayment.Designer.cs">
+      <DependentUpon>fPayment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fTicket.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fTicket.Designer.cs">
+      <DependentUpon>fTicket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\City.cs" />
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\District.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Seat.cs" />
+    <Compile Include="Models\Trip.cs" />
+    <Compile Include="Models\Ward.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rpt_BaoCaoThang.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Rpt_BaoCaoThang.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="rp_Ve.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rp_Ve.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Utility\ADOHelper.cs" />
     <Compile Include="Utility\ConnectionString.cs" />
     <Compile Include="Utility\ControlHelper.cs" />
     <Compile Include="Utility\Utilities.cs" />
+    <Compile Include="Ve.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Ve.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="fAccountInfo.resx">
       <DependentUpon>fAccountInfo.cs</DependentUpon>
     </EmbeddedResource>
@@ -120,11 +171,20 @@
     <EmbeddedResource Include="fAuthenticate.resx">
       <DependentUpon>fAuthenticate.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fBaoCao.resx">
+      <DependentUpon>fBaoCao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fBill.resx">
       <DependentUpon>fBill.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fManagement.resx">
       <DependentUpon>fManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fPayment.resx">
+      <DependentUpon>fPayment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fTicket.resx">
+      <DependentUpon>fTicket.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -135,6 +195,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Rpt_BaoCaoThang.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Rpt_BaoCaoThang.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rp_Ve.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rp_Ve.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ve.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Ve.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -150,14 +222,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Co.svg" />
-    <Content Include="DangChon.svg" />
     <Content Include="icon_xk.ico" />
     <Content Include="ImageSeat\Co.png" />
     <Content Include="ImageSeat\DangChon.png" />
     <Content Include="ImageSeat\Trong.png" />
-    <Content Include="Trong.svg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
